...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="20"/>
                                        <state key="normal" title="Sign Up">
                                            <color key="titleColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        </connections>
                                    </button>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Email" textAlignment="center" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="PgJ-Qw-JHi">
                                        <rect key="frame" x="49" y="108" width="300" height="40"/>
                                        <constraints>
...
                                        <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="20"/>
                                        <color key="tintColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Sign In">
                                            <color key="titleColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        </connections>
                                    </button>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Password" textAlignment="center" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="qpL-H3-dvP">
                                        <rect key="frame" x="49" y="156" width="300" height="40"/>
                                        <constraints>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="20"/>
                                        <state key="normal" title="Create Account">
                                            <color key="titleColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="20"/>
                                        <state key="normal" title="Back">
                                            <color key="titleColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        </connections>
                                    </button>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Confirm Password" textAlignment="center" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="qbm-w3-6Rx">
                                        <rect key="frame" x="49" y="203" width="300" height="40"/>
                                        <constraints>
...
                                <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="20"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Start Working"/>
                                <connections>
                                    <action selector="btnStart:" destination="r0B-yr-Dae" eventType="touchUpInside" id="f7U-RI-Bw7"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Rock"/>
                                        <connections>
                                            <action selector="btnRock:" destination="r0B-yr-Dae" eventType="touchUpInside" id="u4K-7l-gpE"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Pop"/>
                                        <connections>
                                            <action selector="btnPop:" destination="r0B-yr-Dae" eventType="touchUpInside" id="wAu-tJ-2Gp"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Indie"/>
                                        <connections>
                                            <action selector="btnIndie:" destination="r0B-yr-Dae" eventType="touchUpInside" id="9Gg-aj-NCr"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Hip Hop"/>
                                        <connections>
                                            <action selector="btnHipHop:" destination="r0B-yr-Dae" eventType="touchUpInside" id="h8P-gl-roc"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Country"/>
                                        <connections>
                                            <action selector="btnCountry:" destination="r0B-yr-Dae" eventType="touchUpInside" id="ppU-yN-CdJ"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Jazz"/>
                                        <connections>
                                            <action selector="btnJazz:" destination="r0B-yr-Dae" eventType="touchUpInside" id="7T5-cw-y7y"/>
...
