...
        actIn.stopAnimating()
        actIn.isHidden = true
    }
    override func viewWillAppear(_ animated: Bool) {
        myTaskViewModel.getListOfTasks()
        tableView.reloadData()
        self.title = "Task List"
    }
    // MARK: Button IBActions
    @IBAction func favSwitchTapped(_ sender: UISwitch) {
        if sender.isOn {
            useFavourites = true
        } else {
...
